update main page

--- a/index.html
+++ b/index.html
@@ -73,21 +73,14 @@
                                 <div class="correct--word correct--main-word d-flex">
                                     <div class="correct--word-num">3</div>
                                     <div class="correct--word-text">
-                                        <span>სწორი მიმართულების მიცემა</span> <span class="slash">/</span> 
-                                        <span class="main--correct-word">გადამისამართება</span> <span class="slash">/</span> 
-                                        <span>გადამისამრთება</span>
+                                        <span>სწორი მიმართულების მიცემა</span>
                                     </div>                        
                                 </div>
 
                                 <div class="correct--word d-flex">
                                     <div class="correct--word-text">
-                                        <span>მაგალითი (1): მეშთამ გვიწოდებენ, უარზე, ეშოვნა, ფანჯარასთან ცოტამ ვთვლიდგაჭირვებისაგან</span>                           
-                                    </div>
-                                </div>
-
-                                <div class="correct--word d-flex">
-                                    <div class="correct--word-text">
-                                        <span>მაგალითი (2): მეშთამ გვიწოდებენ, უარზე, ეშოვნა, ფანჯარასთან ცოტამ ვთვლიდი გაჭირვებისაგან</span>                          
+                                        <span class="example">მაგალითი (2):</span>              
+                                        <span>სწორი მიმართულების მიცემა</span>            
                                     </div>
                                 </div>
                             </div>
@@ -117,21 +110,14 @@
                                 <div class="correct--word correct--main-word d-flex">
                                     <div class="correct--word-num">3</div>
                                     <div class="correct--word-text">
-                                        <span>სწორი მიმართულების მიცემა</span> <span class="slash">/</span> 
-                                        <span class="main--correct-word">გადამისამართება</span> <span class="slash">/</span> 
-                                        <span>გადამისამრთება</span>
+                                        <span>სწორი მიმართულების მიცემა</span>
                                     </div>                        
                                 </div>
 
                                 <div class="correct--word d-flex">
                                     <div class="correct--word-text">
-                                        <span>მაგალითი (1): მეშთამ გვიწოდებენ, უარზე, ეშოვნა, ფანჯარასთან ცოტამ ვთვლიდგაჭირვებისაგან</span>                           
-                                    </div>
-                                </div>
-
-                                <div class="correct--word d-flex">
-                                    <div class="correct--word-text">
-                                        <span>მაგალითი (2): მეშთამ გვიწოდებენ, უარზე, ეშოვნა, ფანჯარასთან ცოტამ ვთვლიდი გაჭირვებისაგან</span>                          
+                                        <span class="example">მაგალითი (2):</span>              
+                                        <span>სწორი მიმართულების მიცემა</span>            
                                     </div>
                                 </div>
                             </div>
