--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </div>
 
                     <div class="popup__bottom d-flex justify-between">
-                        <a id="forgetPass" href="#" data-id="">დაგავიწყდა ?</a>
+                        <a id="forgetPass" href="#" data-id="reset">დაგავიწყდა ?</a>
 
                         <button type="submit" class="btn-danger">შესვლა</button>
                     </div>
