--- a/index.html
+++ b/index.html
@@ -147,20 +147,46 @@
                     <div class="filter__dropdown" id="filter__dropdown">
                           <form action="#">
                                 <div class="filter__dropdown-container">
-                                    <div class="radio">
+                                    <!-- <div class="radio">
                                         <input id="radio-1" name="radio" type="radio" checked>
                                         <label for="radio-1" class="radio-label">თარიღის მიხედვით</label>
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
                                     </div>
                                     
                                     <div class="radio">
                                         <input id="radio-2" name="radio" type="radio">
                                         <label  for="radio-2" class="radio-label">ანბანის მიხედვით</label>
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option2" checked>
                                     </div>
 
                                     <div class="radio">
                                         <input id="radio-3" name="radio" type="radio">
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+
                                         <label  for="radio-3" class="radio-label"><span>შემთხვევითობის პრინციპით</span></label>
+                                    </div> -->
+
+
+                                    <div class="form-check radio">
+                                        <input class="form-check-input" type="radio" name="exampleRadios1" id="exampleRadios1">
+                                        <label class="form-check-label radio-label" for="exampleRadios1">
+                                            თარიღის მიხედვით
+                                        </label>
                                     </div>
+
+                                      <div class="form-check radio">
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2">
+                                        <label class="form-check-label radio-label" for="exampleRadios2">
+                                            ანბანის მიხედვით
+                                        </label>
+                                      </div>
+
+                                      <div class="form-check radio">
+                                        <input class="form-check-input radio" type="radio" name="exampleRadios" id="exampleRadios3">
+                                        <label class="form-check-label radio-label" for="exampleRadios3">
+                                            შემთხვევითობის პრინციპით
+                                        </label>
+                                      </div>
 
                                 </div>
                           </form>
