--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <nav class="header__left__right header__middle d-flex">
                 <a class="about__project" href="#">პროექტის შესახებ</a>
-                <a class="add__word d-flex align-items" href="#">დაამატე სიტყვა <img class="plus__icon" src="images/plus-icon.png" alt="plus"></a>
+                <a class="add__word d-flex align-items" href="/addword.html">დაამატე სიტყვა <img class="plus__icon" src="images/plus-icon.png" alt="plus"></a>
             </nav>
 
             <div class="header__left__right header__right d-flex align-items cursor-pointer h-100">
@@ -147,28 +147,8 @@
                     <div class="filter__dropdown" id="filter__dropdown">
                           <form action="#">
                                 <div class="filter__dropdown-container">
-                                    <!-- <div class="radio">
-                                        <input id="radio-1" name="radio" type="radio" checked>
-                                        <label for="radio-1" class="radio-label">თარიღის მიხედვით</label>
-                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-                                    </div>
-                                    
-                                    <div class="radio">
-                                        <input id="radio-2" name="radio" type="radio">
-                                        <label  for="radio-2" class="radio-label">ანბანის მიხედვით</label>
-                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option2" checked>
-                                    </div>
-
-                                    <div class="radio">
-                                        <input id="radio-3" name="radio" type="radio">
-                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-
-                                        <label  for="radio-3" class="radio-label"><span>შემთხვევითობის პრინციპით</span></label>
-                                    </div> -->
-
-
                                     <div class="form-check radio">
-                                        <input class="form-check-input" type="radio" name="exampleRadios1" id="exampleRadios1">
+                                        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1">
                                         <label class="form-check-label radio-label" for="exampleRadios1">
                                             თარიღის მიხედვით
                                         </label>
@@ -187,6 +167,8 @@
                                             შემთხვევითობის პრინციპით
                                         </label>
                                       </div>
+
+                                      <button class="btn btn-danger" type="submit">შენახვა</button>
 
                                 </div>
                           </form>
