--- a/register.html
+++ b/register.html
@@ -46,7 +46,8 @@
 
     <div class="word__container auth__container">
         <div class="myform first__form">
-            <h1 class="section__title">შესვლა</h1>
+            <h1 class="section__title register__title">რეგისტრაცია</h1>
+
             <form>
                 <div class="form-group">
                     <label for="exampleInputEmail1">ელ-ფოსტა</label>
@@ -54,23 +55,27 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="exampleInputPassword1">პაროლი</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <label for="exampleInputPassword2">სახელი</label>
+                    <input type="password" class="form-control" id="exampleInputPassword2">
                 </div>
 
-                <a class="forgetPass" href="#">დაგავიწყდა ?</a>
+                <div class="form-group">
+                    <label for="exampleInputEmail3">გვარი</label>
+                    <input type="email" class="form-control" id="exampleInputEmail3" aria-describedby="emailHelp">
+                </div>
 
-                <button type="submit" class="btn-danger">შესვლა</button>
-                </form>
+                <div class="form-group">
+                    <label for="exampleInputEmail4">პაროლი</label>
+                    <input type="email" class="form-control" id="exampleInputEmail4" aria-describedby="emailHelp">
+                </div>
 
+                <div class="form-group">
+                    <label for="exampleInputEmail5">გაიმეორეთ პაროლი</label>
+                    <input type="email" class="form-control" id="exampleInputEmail5" aria-describedby="emailHelp">
+                </div>
 
-            <div class="fb-auth d-flex justify-center">
-                <a href="#" class="facebook__login">
-                    <span>Facebook-ით შესვლა</span>
-                </a>
-            </div>
-
-            <div class="error">მითითებული მეილი რეგისტრირებულია</div>
+                <button type="submit" class="btn-danger register__btn">რეგისტრაცია</button>
+            </form>
         </div>
     </div>
 
