--- a/errorpage.html
+++ b/errorpage.html
@@ -44,32 +44,9 @@
     </header>
 
 
-    <div class="word__container auth__container">
-        <div class="myform first__form">
-            <h1 class="section__title">შესვლა</h1>
-            <form>
-                <div class="form-group">
-                    <label for="exampleInputEmail1">ელ-ფოსტა</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                </div>
-
-                <div class="form-group">
-                    <label for="exampleInputPassword1">პაროლი</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
-                </div>
-
-                <a class="forgetPass" href="#">დაგავიწყდა ?</a>
-
-                <button type="submit" class="btn-danger">შესვლა</button>
-                </form>
-
-
-            <div class="fb-auth d-flex justify-center">
-                <a href="#" class="facebook__login">
-                    <span>Facebook-ით შესვლა</span>
-                </a>
-            </div>
-        </div>
+    <div class="text-center p-0 d-flex">
+        <p class="error__page-p">EROR 404</p>
+        <p class="error__page-p2">page not found</p>
     </div>
 
 
