--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="header__left__right header__right d-flex align-items cursor-pointer h-100">
                 <img id="not__login" class="open__popup" data-popup="login__and__register" src="images/not-login.png" alt="not login">
 
-                <!-- <div class="user__is__login relative h-100">
+                <div class="user__is__login relative h-100">
                     <div class="user d-flex align-items">
                         <div class="user__img" style="background-image: url('images/user-photo.png')"></div>
                         <h5 class="user__title">ანა შაკაია</h5>
@@ -36,7 +36,7 @@
                             <li><a href="#">გამოსვლა</a></li>
                         </ul>
                     </div>
-                </div> -->
+                </div>
                 
             </div>
         </div>
