--- a/errorpage.html
+++ b/errorpage.html
@@ -17,17 +17,17 @@
 
             <nav class="header__left__right header__middle d-flex">
                 <a class="about__project" href="/about.html">პროექტის შესახებ</a>
-                <a class="add__word d-flex align-items" href="/addword.html">დაამატე სიტყვა <img class="plus__icon" src="images/plus-icon.png" alt="plus"></a>
+                <a class="add__word d-flex align-items" href="/addword.html">დაამატე სიტყვა <img class="plus__icon" src="images/plus-icon.svg" alt="plus"></a>
             </nav>
 
             <div class="header__left__right header__right d-flex align-items cursor-pointer h-100">
-                <img id="not__login" class="open__popup" data-popup="login__and__register" src="images/not-login.png" alt="not login">
+                <img id="not__login" class="open__popup" data-popup="login__and__register" src="images/not-login.svg" alt="not login">
 
                 <!-- <div class="user__is__login relative h-100">
                     <div class="user d-flex align-items">
                         <div class="user__img" style="background-image: url('images/user-photo.png')"></div>
                         <h5 class="user__title">ანა შაკაია</h5>
-                        <img class="polygon__img" src="images/Polygon.png" alt="Polygon">
+                        <img class="polygon__img" src="images/Polygon.svg" alt="Polygon">
                     </div>
 
                     <div class="header__dropdown">
@@ -44,7 +44,7 @@
     </header>
 
 
-    <div class="text-center p-0 d-flex">
+    <div class="error__page text-center p-0 d-flex">
         <p class="error__page-p">EROR 404</p>
         <p class="error__page-p2">page not found</p>
     </div>
@@ -54,18 +54,18 @@
     <footer class="footer">
         <div class="container d-flex justify-between align-items h-100">
             <div class="footer__left d-flex justify-center column align-items">
-                <img src="images/handphone.png" alt="handphone">
+                <img src="images/handphone.svg" alt="handphone">
                 <span class="footer__text">0322222222</span>
             </div>
 
             <div class="social__icons footer__left d-flex">
-                <img class="cursor-pointer" src="images/twitter.png" alt="twitter">
-                <img class="cursor-pointer" src="images/facebook.png" alt="facebook">
-                <img class="cursor-pointer" src="images/instagram.png" alt="instagram">
+                <img class="cursor-pointer" src="./images/twitter.svg" alt="twitter">
+                <img class="cursor-pointer" src="./images/facebook.svg" alt="facebook">
+                <img class="cursor-pointer" src="./images/instagram.svg" alt="instagram">
             </div>
 
             <div class="footer__left d-flex justify-center column align-items">
-                <img src="images/envelope.png" alt="envelope">
+                <img src="images/envelope.svg" alt="envelope">
                 <span class="footer__text">yulaba@gmail.com</span>
             </div>
         </div>
