--- a/user-page.html
+++ b/user-page.html
@@ -13,7 +13,7 @@
     <!-- header -->
     <header class="header">
         <div class="container d-flex justify-between align-items h-100">
-            <div class="logo__container"><a class="logo" href="#">ყულაბა</a></div>
+            <div class="logo__container"><a class="logo" href="/">ყულაბა</a></div>
 
             <nav class="header__left__right header__middle d-flex">
                 <a class="about__project" href="/about.html">პროექტის შესახებ</a>
@@ -42,13 +42,6 @@
             </div>
         </div>
     </header>
-
-
-
-
-
-
-
 
 
 
