update add word

--- a/addword.html
+++ b/addword.html
@@ -94,15 +94,15 @@
                     <input class="level__input" type="text" placeholder="დაამატე განმარტება">
 
                     <div class="level-2-checkbox">
-                        <div class="form-check radio">
-                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4">
+                        <div class="form-check checkbox">
+                            <input class="form-check-input" type="checkbox" name="exampleRadios" id="exampleRadios4">
                             <label class="form-check-label radio-label" for="exampleRadios4">
                                 მთავარი
                             </label>
                         </div>
 
-                        <div class="form-check radio">
-                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios5">
+                        <div class="form-check checkbox">
+                            <input class="form-check-input" type="checkbox" name="exampleRadios" id="exampleRadios5">
                             <label class="form-check-label radio-label" for="exampleRadios5">
                                 აქტიური
                             </label>
@@ -133,15 +133,15 @@
                     <input class="level__input" type="text" placeholder="მოიყვანეთ წინადადებაში გამოყენების მაგალითი…">
 
                     <div class="level-2-checkbox">
-                        <div class="form-check radio">
-                            <input class="form-check-input" type="radio" name="exampleRadios2" id="exampleRadios6">
+                        <div class="form-check checkbox">
+                            <input class="form-check-input" type="checkbox" name="exampleRadios2" id="exampleRadios6">
                             <label class="form-check-label radio-label" for="exampleRadios6">
                                 მთავარი
                             </label>
                         </div>
 
-                        <div class="form-check radio">
-                            <input class="form-check-input" type="radio" name="exampleRadios2" id="exampleRadios7">
+                        <div class="form-check checkbox">
+                            <input class="form-check-input" type="checkbox" name="exampleRadios2" id="exampleRadios7">
                             <label class="form-check-label radio-label" for="exampleRadios7">
                                 აქტიური
                             </label>
