--- a/index.html
+++ b/index.html
@@ -62,10 +62,14 @@
 
                 <!-- left -->
                 <div class="col-lg-8 word__left">
+                   <form class="search__word-form">
                     <div class="form-group">
                         <input class="form-control my__box__shadow" type="text" placeholder="ჩაწერეთ საძიებო სიტყვა">
-                        <img class="search__icon" src="images/search-icon.svg" alt="search">
+                        <button class="search__word-btn" type="submit">
+                            <img src="images/search-icon.svg" alt="search-icon">
+                        </button>
                     </div>
+                   </form>
 
                     <div class="about_word">
 
@@ -78,7 +82,7 @@
                         <!-- success -->
                         <div class="correct__word">
                             <div class="correct__word-top">
-                                <h2 class="correct__word-title">გადამისამართება</h2>
+                                <a href="#" class="correct__word-title">გადამისამართება</a>
                                 <span class="correct__word-number">3</span>
                             </div>
 
@@ -109,8 +113,6 @@
                                 </div>
                             </div>
                         </div>
-
-        
                     </div>
                 </div>
 
@@ -175,8 +177,6 @@
             </div>
         </div>
     </footer>
-
-
 
    
 
