--- a/addword.html
+++ b/addword.html
@@ -96,8 +96,11 @@
                     <div class="level-2-checkbox">
                         <div class="form-check checkbox">
                             <input class="form-check-input" type="checkbox" name="exampleRadios" id="exampleRadios4">
+                            
+                            <input type="hidden">
+                            
                             <label class="form-check-label radio-label" for="exampleRadios4">
-                                მთავარი
+                                    მთავარი
                             </label>
                         </div>
 
