--- a/addword.html
+++ b/addword.html
@@ -86,7 +86,10 @@
                         </div>
                     </div>
 
-                    <button class="btn btn-danger level__btn">შენახვა</button>
+                    <div class="level__mybtns">
+                        <button class="btn btn-danger level__btn">შენახვა</button>
+                        <button class="btn btn-danger level__btn">უარყოფა</button>
+                    </div>
                 </div>
 
                 <!-- level 2 -->
@@ -126,7 +129,10 @@
                         </div>
                     </div>   
 
-                    <button class="btn btn-danger level__btn">შენახვა</button>
+                    <div class="level__mybtns">
+                        <button class="btn btn-danger level__btn">შენახვა</button>
+                        <button class="btn btn-danger level__btn">უარყოფა</button>
+                    </div>
                 </div>
 
                 <!-- level 3 -->
@@ -163,7 +169,10 @@
                         </div>
                     </div>
 
-                    <button class="btn btn-danger level__btn">შენახვა</button>
+                    <div class="level__mybtns">
+                        <button class="btn btn-danger level__btn">შენახვა</button>
+                        <button class="btn btn-danger level__btn">უარყოფა</button>
+                    </div>
                 </div>
             </div>
         </div>
