--- a/index.html
+++ b/index.html
@@ -57,6 +57,150 @@
 
 
     <div class="word__wrapper">
+
+
+
+        <div class="az flex justify-between" id="alphabet">
+            <label for="myChoice0">
+                *<br />
+                <input style="display:none" type="radio" id="myChoice0" name="startsWidth" value="none">
+            </label>
+            <label for="myChoice1">
+                ა<br />
+                <input type="radio" id="myChoice1" name="startsWidth" value="ა">
+            </label>
+            <label for="myChoice2">
+                ბ<br />
+                
+                <input style="display:none" type="radio" id="myChoice2" name="startsWidth" value="ბ">
+            </label>
+            <label for="myChoice3">
+                გ<br />
+                <input style="display:none" type="radio" id="myChoice3" name="startsWidth" value="გ">
+            </label>
+            <label for="myChoice4">
+                დ<br />
+                <input style="display:none" type="radio" id="myChoice4" name="startsWidth" value="დ">
+            </label>
+            <label for="myChoice5">
+                ე<br />
+                <input style="display:none" type="radio" id="myChoice5" name="startsWidth" value="ე">
+            </label>
+            <label for="myChoice6">
+                ვ<br />
+                <input style="display:none" type="radio" id="myChoice6" name="startsWidth" value="ვ">
+            </label>
+            <label for="myChoice7">
+                ზ<br />
+                <input style="display:none" type="radio" id="myChoice7" name="startsWidth" value="ზ">
+            </label>
+            <label for="myChoice8">
+                თ<br />
+                <input style="display:none" type="radio" id="myChoice8" name="startsWidth" value="თ">
+            </label>
+            <label for="myChoice9">
+                ი<br />
+                <input style="display:none" type="radio" id="myChoice9" name="startsWidth" value="ი">
+            </label>
+            <label for="myChoice10">
+                კ<br />
+                <input style="display:none" type="radio" id="myChoice10" name="startsWidth" value="კ">
+            </label>
+            <label for="myChoice11">
+                ლ<br />
+                <input style="display:none" type="radio" id="myChoice11" name="startsWidth" value="ლ">
+            </label>
+            <label for="myChoice12">
+                მ<br />
+                <input style="display:none" type="radio" id="myChoice12" name="startsWidth" value="მ">
+            </label>
+            <label for="myChoice12">
+                ნ<br />
+                <input style="display:none" type="radio" id="myChoice13" name="startsWidth" value="ნ">
+            </label>
+            <label for="myChoice14">
+                ო<br />
+                <input style="display:none" type="radio" id="myChoice14" name="startsWidth" value="ო">
+            </label>
+            <label for="myChoice15">
+                პ<br />
+                <input style="display:none" type="radio" id="myChoice15" name="startsWidth" value="პ">
+            </label>
+            <label for="myChoice16">
+                ჟ<br />
+                <input style="display:none" type="radio" id="myChoice16" name="startsWidth" value="ჟ">
+            </label>
+            <label for="myChoice17">
+                რ<br />
+                <input style="display:none" type="radio" id="myChoice17" name="startsWidth" value="რ">
+            </label>
+            <label for="myChoice18">
+                ს<br />
+                <input style="display:none" type="radio" id="myChoice18" name="startsWidth" value="ს">
+            </label>
+            <label for="myChoice19">
+                ტ<br />
+                <input style="display:none" type="radio" id="myChoice19" name="startsWidth" value="ტ">
+            </label>
+            <label for="myChoice20">
+                უ<br />
+                <input style="display:none" type="radio" id="myChoice20" name="startsWidth" value="უ">
+            </label>
+            <label for="myChoice21">
+                ფ<br />
+                <input style="display:none" type="radio" id="myChoice21" name="startsWidth" value="ფ">
+            </label>
+            <label for="myChoice22">
+                ქ<br />
+                <input style="display:none" type="radio" id="myChoice22" name="startsWidth" value="ქ">
+            </label>
+            <label for="myChoice23">
+                ღ<br />
+                <input style="display:none" type="radio" id="myChoice23" name="startsWidth" value="ღ">
+            </label>
+            <label for="myChoice24">
+                ყ<br />
+                <input style="display:none" type="radio" id="myChoice24" name="startsWidth" value="ყ">
+            </label>
+            <label for="myChoice25">
+                შ<br />
+                <input style="display:none" type="radio" id="myChoice25" name="startsWidth" value="შ">
+            </label>
+            <label for="myChoice26">
+                ჩ<br />
+                <input style="display:none" type="radio" id="myChoice26" name="startsWidth" value="ჩ">
+            </label>
+            <label for="myChoice27">
+                ც<br />
+                <input style="display:none" type="radio" id="myChoice27" name="startsWidth" value="ც">
+            </label>
+            <label for="myChoice28">
+                ძ<br />
+                <input style="display:none" type="radio" id="myChoice28" name="startsWidth" value="ძ">
+            </label>
+            <label for="myChoice29">
+                წ<br />
+                <input style="display:none" type="radio" id="myChoice29" ame="startsWidth" value="წ">
+            </label>
+            <label for="myChoice30">
+                ჭ<br />
+                <input style="display:none" type="radio" id="myChoice30" name="startsWidth" value="ჭ">
+            </label>
+            <label for="myChoice31">
+                ხ<br />
+                <input style="display:none" type="radio" id="myChoice31" name="startsWidth" value="ხ">
+            </label>
+            <label for="myChoice32">
+                ჯ<br />
+                <input style="display:none" type="radio" id="myChoice32" name="startsWidth" value="ჯ">
+            </label>
+            <label for="myChoice33">
+                ჰ<br />
+                <input style="display:none" type="radio" id="myChoice33" name="startsWidth" value="ჰ">
+            </label>
+        </div>
+
+
         <div class="word__container">
             <div class="row">
 
