--- a/addword.html
+++ b/addword.html
@@ -84,6 +84,14 @@
                             <a href="#" class="x__edit__icon x-icon cursor-pointer" style="background-image: url('./images/x-icon.svg')"></a>
                             <a href="#" class="x__edit__icon cursor-pointer" style="background-image: url('./images/pencil.svg')"></a>
                         </div>
+
+                        <div class="isActive">
+                            <form class="isActive__child">
+                                <button type="submit">
+                                    <img src="./images/lightbulb-on.svg" alt="on">
+                                </button>
+                            </form>
+                        </div>
                     </div>
 
                     <div class="level__mybtns">
@@ -115,7 +123,7 @@
                     
 
                     <div class="level__completed">
-                        <div class="completed__level">
+                        <div class="completed__level w-100">
                             <div class="completed__level-left">
                                 <span>სწორი მიმართულების მიცემა</span>
                             
@@ -127,6 +135,23 @@
                                 <a href="#" class="x__edit__icon cursor-pointer" style="background-image: url('./images/pencil.svg')"></a>
                             </div>
                         </div>
+
+                        <div class="isActive">
+                            <div class="isActive__child isActive__child2 flex column">
+                                <form class="flex justify-content">
+                                    <button type="submit">
+                                        <img src="./images/check-mark.svg" alt="checked">
+                                    </button>
+                                </form>
+
+                                <form style="margin-top: 10px" class="flex justify-content">
+                                    <button type="submit">
+                                        <img src="./images/lightbulb-on.svg" alt="off">
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+
                     </div>   
 
                     <div class="level__mybtns">
@@ -165,6 +190,22 @@
                             <div class="completed__level-right">
                                 <a href="#" class="x__edit__icon x-icon cursor-pointer" style="background-image: url('./images/x-icon.svg')"></a>
                                 <a href="#" class="x__edit__icon cursor-pointer" style="background-image: url('./images/pencil.svg')"></a>
+                            </div>
+                        </div>
+
+                        <div class="isActive">
+                            <div class="isActive__child isActive__child2 flex column">
+                                <form class="flex justify-content">
+                                    <button type="submit">
+                                        <img src="./images/check-mark-black.svg" alt="unchecked">
+                                    </button>
+                                </form>
+
+                                <form style="margin-top: 10px" class="flex justify-content">
+                                    <button type="submit">
+                                        <img src="./images/lightbulb-off.svg" alt="off">
+                                    </button>
+                                </form>
                             </div>
                         </div>
                     </div>
