--- a/addword.html
+++ b/addword.html
@@ -182,7 +182,7 @@
                     
 
                     <div class="level__completed">
-                        <div class="completed__level">
+                        <div class="completed__level w-100">
                             <div class="completed__level-left">
                                 <span>მოიყვანეთ წინადადებაში გამოყენების მაგალითი…</span>
                             </div>
