--- a/addword.html
+++ b/addword.html
@@ -139,7 +139,7 @@
                         <div class="isActive">
                             <div class="isActive__child isActive__child2 flex column">
                                 <form class="flex justify-content">
-                                    <button type="submit">
+                                    <button class="is_checked" type="submit">
                                         <img src="./images/check-mark.svg" alt="checked">
                                     </button>
                                 </form>
@@ -196,7 +196,7 @@
                         <div class="isActive">
                             <div class="isActive__child isActive__child2 flex column">
                                 <form class="flex justify-content">
-                                    <button type="submit">
+                                    <button class="is_checked" type="submit">
                                         <img src="./images/check-mark-black.svg" alt="unchecked">
                                     </button>
                                 </form>
