update mywords page

--- a/addword.html
+++ b/addword.html
@@ -85,7 +85,7 @@
                             <a href="#" class="x__edit__icon cursor-pointer" style="background-image: url('./images/pencil.svg')"></a>
                         </div>
 
-                        <div class="isActive">
+                        <div class="isActive" style="left: -72px">
                             <form class="isActive__child">
                                 <button type="submit">
                                     <img src="./images/lightbulb-on.svg" alt="on">
@@ -109,7 +109,7 @@
                             <input class="form-check-input" type="checkbox" name="exampleRadios" id="exampleRadios4">
                                                         
                             <label class="form-check-label radio-label" for="exampleRadios4">
-                                    მთავარი
+                                მთავარი
                             </label>
                         </div>
 
