--- a/my-word.html
+++ b/my-word.html
@@ -53,16 +53,44 @@
 
         <div class="my__words">
             <ul class="my__words-ul">
-                <li class="my__words-li"><a href="#">გადამისამართება</a> <span class="word__received pending">განიხილება...</span></li>
-                <li class="my__words-li"><a href="#">გადამისამართება</a> <span class="word__received pending">განიხილება...</span></li>
-                <li class="my__words-li"><a href="#">გადამისამართება</a> <span class="word__received">მიღებულია</span></li>
-                <li class="my__words-li"><a href="#">გადამისამართება</a> <span class="word__received">მიღებულია</span></li>
-                <li class="my__words-li"><a href="#">გადამისამართება</a> <span class="word__received">მიღებულია</span></li>
-                <li class="my__words-li"><a href="#">გადამისამართება</a> <span class="word__received">მიღებულია</span></li>
-                <li class="my__words-li"><a href="#">გადამისამართება</a> <span class="word__received">მიღებულია</span></li>
+                <li class="my__words-li"><a class="pending" href="#">გადამისამართება</a> 
+                    <span class="word__received flex">
+                        <div class="my__words-icon" style="background-image: url('./images/pencil.svg')"></div>
+                        <div class="my__words-icon" style="background-image: url('./images/x-icon.svg')"></div>
+                    </span>
+                </li>
+
+                <li class="my__words-li"><a class="pending" href="#">გადამისამართება</a> 
+                    <span class="word__received flex">
+                        <div class="my__words-icon" style="background-image: url('./images/pencil.svg')"></div>
+                        <div class="my__words-icon" style="background-image: url('./images/x-icon.svg')"></div>
+                    </span>
+                </li>
+
+                <li class="my__words-li"><a href="#">გადამისამართება</a> 
+                    <span class="word__received flex">
+                        <div class="my__words-icon" style="background-image: url('./images/pencil.svg')"></div>
+                        <div class="my__words-icon" style="background-image: url('./images/x-icon.svg')"></div>
+                    </span>
+                </li>
+
+                <li class="my__words-li"><a href="#">გადამისამართება</a> 
+                    <span class="word__received flex">
+                        <div class="my__words-icon" style="background-image: url('./images/pencil.svg')"></div>
+                        <div class="my__words-icon" style="background-image: url('./images/x-icon.svg')"></div>
+                    </span>
+                </li>
+
+                <li class="my__words-li"><a href="#">გადამისამართება</a> 
+                    <span class="word__received flex">
+                        <div class="my__words-icon" style="background-image: url('./images/pencil.svg')"></div>
+                        <div class="my__words-icon" style="background-image: url('./images/x-icon.svg')"></div>
+                    </span>
+                </li>
+                
             </ul>
 
-            <ul class="flex align-items justify-center">
+            <ul class="flex align-items justify-center mt-48">
                 <li class="pagination active"><a href="#">1</a></li>
                 <li class="pagination"><a href="#">2</a></li>
                 <li class="pagination"><a href="#">3</a></li>
